--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 install:
 - "./Scripts/install.sh"
 script:
-- "./Scripts/build.sh"
+- travis_wait 30 "./Scripts/build.sh"
 
 jdk: oraclejdk8
 
@@ -28,7 +28,8 @@ deploy:
   keep-history: false
   skip_cleanup: true
   on:
-    repo: humbertodias/unity-2048
+    tags: true
+    all_branches: true
 
 - provider: releases
   file_glob: true
@@ -39,4 +40,5 @@ deploy:
   api_key: $GITHUB_TOKEN
   skip_cleanup: true
   on:
-    repo: humbertodias/unity-2048
+    tags: true
+    all_branches: true
